3809 Recent libc change breaks Solaris 10 Branded Zone Support